Fix compound kanji alignment
Very hacky CSS... I ended up making an additional property to be specified for vertical writing, so different styles can be applied...

--- a/src/components/Kanji.module.css
+++ b/src/components/Kanji.module.css
@@ -5,33 +5,34 @@
 	line-height: normal;
 }
 .verticalStack {
-	margin-top: 0.2em;
+	margin-block-start: 0.2em;
 	flex-direction: column;
 	line-height: 0.5;
 	vertical-align: text-top;
 	
-	@-moz-document url-prefix() {
-		vertical-align: top;
-		margin-right: 0.1em;
+	&.verticalText * {
+		transform-origin: top;
+	}
+	&:not(.verticalText) {
+		margin-block-start: 0.3em;
 	}
 	
 	* {
 		display: inline-block;
 		transform: scaleY(0.5);
-		transform-origin: top;
 	}
 }
 .horizontalStack {
 	letter-spacing: -0.5em;
-	padding-right: 0.1em;
+	padding-inline-end: 0.1em;
 	
 	@-moz-document url-prefix() {
-		margin-bottom: -0.1em;
-		padding-right: 0.2em;
+		margin-block-end: -0.1em;
+		padding-inline-end: 0.2em;
 	}
 	
 	* {
-		margin-left: -0.05em;
+		margin-inline-start: -0.05em;
 		display: inline-block;
 		transform: scaleX(0.5);
 		transform-origin: top;
